tests/negative/while_basic.em
int main() {
    while {
        int x = 1;
    }
    return 0;
}